Fixed CSS for WebKit browsers on small mode, fixed search xml

--- a/css/app.css
+++ b/css/app.css
@@ -216,6 +216,7 @@ div#radio-player div#radio-left div#np-hash-cover.hash-area {
     font-size: 0.8em;
     color: #333;
     text-shadow: 0px 0px 2px #FFF;
+    z-index: 1;
 }
 
 
@@ -246,6 +247,7 @@ div#radio-player div#radio-left div#np-tags.tag-area {
     white-space: nowrap;
     overflow: hidden;
     font-size: 0.7em;
+    z-index: 1;
 }
 
 div#radio-player div#radio-left div#np-tags.tag-area .tag {
@@ -298,7 +300,6 @@ div#radio-player div#radio-left div#np-tags.tag-area .tag {
 .cover-fit-container {
     position: relative;
     width: 100%;
-    z-index: -1;
     background: rgba(37, 37, 37, 0.3);
 }
 
